added the javascript including the forecast

--- a/index.html
+++ b/index.html
@@ -45,18 +45,7 @@
             <div class="temp-unit">°C</div>
           </div>
         </div>
-        <div class="weather-forecast">
-          <div class="row">
-            <div class="col">
-              <div class="forecast-date">Mon</div>
-              ☁️
-              <div class="forecast-temp">
-                <span class="max-temp">12°</span>
-                <span class="min-temp">10°</span>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
 
       <footer>
