updated the netlify link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </a>
         and
         <a
-          href="https://eleni-s-weather-app.netlify.app/"
+          href="https://elenis-weather-forecast-app.netlify.app/"
           target="_blank"
           rel="noopener noreferrer"
         >
